--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
 {% extends "/layout/page.html" %}
 {% block content %}
+    <img src="https://i1.sndcdn.com/artworks-nnDAtgHu9TVCf8eT-zrnqGA-t500x500.jpg">
 {% endblock %}
