--- a/templates/chart_example.html
+++ b/templates/chart_example.html
@@ -1,6 +1,7 @@
 <div id="chart">
 </div>
-<script src="{{ url_for('static', filename='js/apex/apexcharts.js') }}"></script>
+ <!--<script src="{{ url_for('static', filename='js/apex/apexcharts.js') }}"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/apexcharts@latest"> </script>
 <script>
     var options = {
         series: [{
@@ -50,7 +51,8 @@
           shared: false,
           y: {
             formatter: function (val) {
-              return (val / 1000000).toFixed(0)
+              return val;
+
             }
           }
         }
