--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,36 @@
 {% extends "/layout/page.html" %}
-{% block content %}
-    <img src="https://i1.sndcdn.com/artworks-nnDAtgHu9TVCf8eT-zrnqGA-t500x500.jpg">
-{% endblock %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <style>
+        body { font: 12px Arial;}
+
+        path {
+            stroke-width: 2;
+            fill: none;
+        }
+
+        .axis path, .axis line {
+            fill: none;
+            stroke: grey;
+            stroke-width: 1;
+            shape-rendering: crispEdges;
+        }
+
+        .area {
+            fill: #F0F8FF;
+            stroke-width: 0;
+        }
+    </style>
+</head>
+<body>
+    <div id="graphDiv"></div>
+
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script>
+        // Our Custom D3 JavaScript here!
+    </script>
+</body>
+</html>
