Added new graphs

--- a/templates/bitcoin/price.html
+++ b/templates/bitcoin/price.html
@@ -34,7 +34,7 @@
           size: 0,
         },
         title: {
-          text: 'BTC Daily Price',
+          text: '{{ title }}',
           align: 'left'
         },
         fill: {
