Updated models.py Fixed daily sentiment graphs.

--- a/templates/bitcoin/sentiment.html
+++ b/templates/bitcoin/sentiment.html
@@ -16,7 +16,11 @@
           type: 'line',
           data: [
               {% for sentiment in sentiments %}
-                  {{ sentiment[0] }},
+                  {% if sentiment.avg_sentiment is defined %}
+                    {{ sentiment.avg_sentiment }},
+                  {% else %}
+                    {{ sentiment[0] }},
+                  {% endif %}
               {% endfor %}
           ]
         }],
