--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,25 +1,35 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-<select>
-    <option value="btc_daily_price">BTC Daily Price</option>
-    <option value="btc_weekly_price">BTC Weekly Price</option>
-    <option value="btc_monthly_price">BTC Monthly Price</option>
-    <option value="btc_daily_sentiment">BTC Daily Sentiment</option>
-    <option value="btc_weekly_sentiment">BTC Weekly Sentiment</option>
-    <option value="btc_monthly_sentiment">BTC Monthly Sentiment</option>
-</select>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+<style>
+    .card-img-top {
+        width: 100%;
+        height: 8vw;
+        object-fit: cover;
+    }
+</style>
+<body class="bg-dark">
+    <div class="container">
+        <div class="container-fluid content-row">
+            <div class="row">
 
-<iframe src="{{ url_for('btc_daily_price') }}" class="iframe" scrolling="no" frameborder="0" style="width:100%; height:100%;" id="btc_daily_price"></iframe>
-<iframe src="{{ url_for('btc_weekly_price') }}" class="iframe" scrolling="no" frameborder="0" style="width:100%; height:100%;" id="btc_weekly_price"></iframe>
-<iframe src="{{ url_for('btc_monthly_price') }}" class="iframe" scrolling="no" frameborder="0" style="width:100%; height:100%;" id="btc_monthly_price"></iframe>
+                    <div class="card h-100 bg-light text-dark" style="width:200px">
+                        <img class="card-img-top img-fluid" src="{{ url_for('static', filename='img/twitter_logo.png') }}" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">{{ tweet_count }}</h4>
+                            <p class="card-text">Tweets loaded</p>
+                        </div>
+                    </div>
 
-<iframe src="{{ url_for('btc_daily_sentiment') }}" class="iframe" scrolling="no" frameborder="0" style="width:100%; height:100%;" id="btc_daily_sentiment"></iframe>
-<iframe src="{{ url_for('btc_weekly_sentiment') }}" class="iframe" scrolling="no" frameborder="0" style="width:100%; height:100%;" id="btc_weekly_sentiment"></iframe>
-<iframe src="{{ url_for('btc_monthly_sentiment') }}" class="iframe" scrolling="no" frameborder="0" style="width:100%; height:100%;" id="btc_monthly_sentiment"></iframe>
+                    <div class="card h-100 bg-light text-dark" style="width:200px">
+                        <img class="card-img-top img-fluid " src="{{ url_for('static', filename='img/price_icon.jpg') }}" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">{{ price_count }}</h4>
+                            <p class="card-text">Days of price history</p>
+                        </div>
+                    </div>
 
-<script>
-    $('select').on('change', function() {
-        $('iframe').not('#' + this.value).hide();
-        $('#' + this.value).show();
-    });
-</script>
+            </div>
+        </div>
+        <iframe src="{{ url_for('btc_daily_price') }}" class="iframe" scrolling="no" frameborder="0" style="height:100%; width:100%" id="btc_daily_price"></iframe>
+    </div>
+</body>
