--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,91 +1,16 @@
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<style>
-    h3 {
-        -webkit-text-stroke: 1px black;
-    }
-</style>
+
 <body class="bg-dark">
-    <div class="container">
-        <div class="container-fluid content-row">
-            <div class="card-deck">
-                <div class="card h-100 bg-light text-dark" style="width:200px">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <img class="card-img-top embed-responsive-item" src="{{ url_for('static', filename='img/twitter_logo.png') }}" alt="Card image">
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">{{ tweet_count }}</h4>
-                        <p class="card-text">Tweets loaded</p>
-                    </div>
-                </div>
-
-                <div class="card h-100 bg-light text-dark" style="width:200px">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <img class="card-img-top embed-responsive-item" src="{{ url_for('static', filename='img/price_icon.jpg') }}" alt="Card image">
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">{{ price_count }}</h4>
-                        <p class="card-text">Days of price history</p>
-                    </div>
-                </div>
-
-                <div class="card h-100 bg-light text-dark" style="width:200px">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <img class="card-img-top embed-responsive-item" src="{{ url_for('static', filename='img/news.png') }}" alt="Card image">
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">{{ news_count }}</h4>
-                        <p class="card-text">News articles loaded</p>
-                    </div>
-                </div>
-
-                <div class="card h-100 bg-light text-dark" style="width:200px">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <img class="card-img-top embed-responsive-item" src="{{ url_for('static', filename='img/news.png') }}" alt="Card image">
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">{{ news_count }}</h4>
-                        <p class="card-text">News articles loaded</p>
-                    </div>
-                </div>
-
+    <iframe src="{{ url_for('btc_cards') }}"  onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <iframe src="{{ url_for('btc_daily_price') }}"  onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
             </div>
-        </div>
-        <iframe src="{{ url_for('btc_daily_price') }}" class="iframe" scrolling="no" frameborder="0" style="height:100%; width:100%" id="btc_daily_price"></iframe>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                {% set vars = {'first': True} %}
-
-                {% for article in articles %}
-                    {% if vars.first %}
-                        <div class="carousel-item active">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3>{{ article.headline }}</h3>
-                            </div>
-                            <img class="d-block w-100" src="{{ article.image_url }}">
-                        </div>
-                        {% if vars.update({'first': False}) %} {% endif %}
-                    {% else %}
-                        <div class="carousel-item">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3>{{ article.headline }}</h3>
-                            </div>
-                            <img class="d-block w-100" src="{{ article.image_url }}">
-                        </div>
-                    {% endif %}
-                {% endfor %}
+            <div class="col">
+                <iframe src="{{ url_for('btc_news') }}" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
     </div>
 </body>
