Added tweet carousel.

--- a/templates/bitcoin/news.html
+++ b/templates/bitcoin/news.html
@@ -7,6 +7,9 @@
         text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
         -webkit-font-smoothing: antialiased;
     }
+    .carousel-inner {
+ height:auto;
+}
 </style>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
