--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,9 @@
         </div>
         <div class="row">
             <div class="col">
-                <div id="chart">
+                <div id="synced-charts">
+                    <div id="btc_price"></div>
+                    <div id="tweet_sentiment"></div>
                 </div>
             </div>
         </div>
@@ -29,68 +31,86 @@
 
 <script src="https://cdn.jsdelivr.net/npm/apexcharts@latest"> </script>
 <script>
-	var start_date = new Date("24 Apr 2019"); //Earliest BTC price history we have
-	var options = {
-	    series: [{
-	        data: [
-	            {% for price in prices %}
-	                {
-	                    x: new Date('{{ price.date }}').getTime(),
-	                    y: {{ price.average|round(2) }},
-	                },
-	            {% endfor %}
-	        ]
-	    }],
-	    chart: {
-            id: 'area-datetime',
+    let start_date = new Date('2020-03-21');
+	var optionsLine = {
+        series: [{
+            name: 'BTC Price (USD)',
+            data: [
+                {% for daily_price in prices %}
+                    {
+                        x: new Date('{{ daily_price.date }}').getTime(),
+                        y: {{ daily_price.average }}
+                    },
+                {% endfor %}
+            ]
+        }],
+        colors: ['#00E396'],
+        chart: {
+            id: 'btc_price_column',
+            group: 'social',
             type: 'area',
-            zoom: {
-                autoScaleYaxis: true
-            },
+            height: 400,
             foreColor: '#53eeee'
-	    },
-	    annotations: {
-            yaxis: [{
-                y: 30,
-                borderColor: '#999',
-            }],
-            xaxis: [{
-                x: start_date.getTime(),
-                borderColor: '#999',
-                yAxisIndex: 0,
-            }]
-	    },
-	    dataLabels: {
+        },
+        dataLabels: {
             enabled: false
-	    },
-	    markers: {
-            size: 0,
-            style: 'hollow',
-	    },
-	    xaxis: {
+        },
+        yaxis: {
+            labels: {
+                minWidth: 40
+            }
+        },
+        xaxis: {
             type: 'datetime',
             min: start_date.getTime(),
-            tickAmount: 6,
-	    },
-	    tooltip: {
-            x: {
-                format: 'dd MMM yyyy'
-            }
-	    },
-	    fill: {
-            type: 'gradient',
-            gradient: {
-                shadeIntensity: 1,
-                opacityFrom: 0.7,
-                opacityTo: 0.9,
-                stops: [0, 100]
-            }
-	    },
+        }
     };
+    var chart = new ApexCharts(document.querySelector("#btc_price"), optionsLine)
+    chart.render()
 
-    var chart = new ApexCharts(document.querySelector("#chart"), options);
-    chart.render();
-
+    var optionsArea = {
+        series: [{
+            name: 'Average Tweet Sentiment',
+            data: [
+                {% for sentiment in tweet_sentiments %}
+                    {
+                        x: new Date('{{ sentiment.date }}').getTime(),
+                        y: {{ sentiment.avg_sentiment }}
+                    },
+                {% endfor %}
+            ]
+        },
+        {
+            name: 'Average News Sentiment',
+            data: [
+                {% for sentiment in article_sentiments %}
+                    {
+                        x: new Date('{{ sentiment.date }}').getTime(),
+                        y: {{ sentiment.avg_sentiment }}
+                    },
+                {% endfor %}
+            ]
+        }],
+        colors: ['#008FFB', '#ff4848'],
+        chart: {
+            id: 'tweet_sentiment_line',
+            group: 'social',
+            type: 'line',
+            height: 400,
+            foreColor: '#53eeee'
+        },
+        yaxis: {
+            labels: {
+                minWidth: 40
+            }
+        },
+        xaxis: {
+            type: 'datetime',
+            min: start_date.getTime(),
+        }
+    };
+    var chart2 = new ApexCharts(document.querySelector("#tweet_sentiment"), optionsArea)
+    chart2.render()
 
     let resetCssClasses = function(activeEl) {
         let els = document.querySelectorAll('button');
@@ -105,6 +125,10 @@
         date.setHours(0,0,0,0);
         let start = new Date(date.getTime() - (days * 24 * 60 * 60 * 1000));
         chart.zoomX(
+            start.getTime(),
+            date.getTime()
+        );
+        chart2.zoomX(
             start.getTime(),
             date.getTime()
         );
@@ -147,6 +171,10 @@
         resetCssClasses(e);
         let date = new Date();
         chart.zoomX(
+            start_date.getTime(),
+            date.getTime()
+        );
+        chart2.zoomX(
             start_date.getTime(),
             date.getTime()
         );
